test/corpus/statements.txt
====================
Variables / constants
====================

var test = 1
const test = 1

---

(source_file
    (var_statement
        (var_keyword)
        (identifier)
        (constant
            (int)))
    (const_statement
        (const_keyword)
        (identifier)
        (constant
            (int))))

===================
If statement
===================

if true {
    return true
}

---

(source_file
    (if_statement
        (if_keyword)
        (expression
            (true))
        (block
            (statement
                (return_statement
                    (return_keyword)
                    (constant
                        (true)))))))
